# stage_esp32

./: .gitignore  Cargo.toml  Makefile  README.md
api/: Cargo.toml  Xargo.toml
api/src/: allocators.rs  audio.rs  blinky.rs  display.rs  i2c.rs  i2s.rs  ledc.rs  lib.rs  logger.rs  lwip.rs  nvs.rs  wavetable.rs  wifi.rs
api/src/codec/: adac.rs  mod.rs  sgtl5000.rs
api/src/display/: mod.rs
api/src/driver/: adac.rs  mod.rs  sgtl5000.rs
api/src/driver/sgtl5000/: i2c.rs  mod.rs
api/src/driver/sh1106/: i2c.rs  mod.rs  spi.rs
api/src/driver/wm8731/: i2c.rs  mod.rs
esp_idf/: Cargo.toml  bindings.h  generate.sh
esp_idf/src/: bindings.rs  errors.rs  lib.rs
src/: lib.rs
